--- a/assets/css/home_andy_css.css
+++ b/assets/css/home_andy_css.css
@@ -73,6 +73,7 @@ div.friend-pic {
     left: 0;
     margin: 4px 0 10px 0;
     line-height: 0;
+    margin-top: 2px;
 /*    top: 0;*/
 /*    width: 30%;*/
 /*    margin-left: 30px;*/
@@ -88,7 +89,7 @@ div.friend-referral {
     left: 100px;
 /*    margin-top: 40px;
     margin-right: 30px;*/
-    margin: 20px 200px 0 60px;
+    margin: 25px 200px 0 60px;
     font-weight: normal;
 }
 
@@ -100,13 +101,42 @@ span.vendor-name, span.list-name {
     font-weight: bold;
 }
 
+.ui-state-active-accordion.accordion-header {
+    background-color:#d3d3d3;
+}
+
+.ui-state-active-accordion.subaccordion-header, ui-state-hover-accordion.subaccordion-header {
+/*    background-color:white;*/
+    border-bottom: 2px black solid;
+}
+
 div.subaccordion-header {
     position: relative;
 /*    height: 60px;*/
     height: 100%;
     width: 100%;
-    padding: 10px 0 0 0;
+    padding: 5px 0 0 0;
 /*    margin: 5px 0 0 0;*/
+
+    -moz-border-radius-topleft: 0px; 
+    -webkit-border-top-left-radius: 0px; 
+    -khtml-border-top-left-radius: 0px; 
+    border-top-left-radius: 0px;
+    
+    -moz-border-radius-topright: 0px; 
+    -webkit-border-top-right-radius: 0px; 
+    -khtml-border-top-right-radius: 0px; 
+    border-top-right-radius: 0px;
+    
+    -moz-border-radius-bottomleft: 0px; 
+    -webkit-border-bottom-left-radius: 0px; 
+    -khtml-border-bottom-left-radius: 0px; 
+    border-bottom-left-radius: 0px;
+    
+    -moz-border-radius-bottomright: 0px; 
+    -webkit-border-bottom-right-radius: 0px; 
+    -khtml-border-bottom-right-radius: 0px; 
+    border-bottom-right-radius: 0px;
 }
 
 .subaccordion-object {
@@ -126,6 +156,15 @@ div.button-row {
     right: 0;
     width: 250px;
     margin: 15px;
+}
+
+div.subaccordion-button-row {
+    position: absolute;
+    float: right;
+    top: 0;
+    right: 0;
+    width: 250px;
+    margin: 5px;
 }
 
 /* button rows */
@@ -192,7 +231,7 @@ div.number-of-likes {
     padding-bottom: 2px;
     margin-right:4px;
     padding-left:0px;
-    float:right;
+    float:right;    
     height:28px;
     width:42px;
 }
@@ -217,6 +256,7 @@ div.time-stamp {
     color: #808080;
     font-size: 80%;
     font-weight: normal;
+    margin-bottom: 5px;
 }
 
 div.comments {
@@ -228,7 +268,7 @@ div.comments {
 
 span.referral-comment {
     font-weight: normal;
-    margin: 10px 0 10px 30px;
+    margin: 3px 0 8px 0px;
 }
 
 .comment-input {
