--- a/assets/css/login_css.css
+++ b/assets/css/login_css.css
@@ -16,7 +16,7 @@ root {
 }
 
 div.logo {
-    background:url(../images/piggyback.png) no-repeat center;
+    background:url(../images/piggyback_login.png) no-repeat center;
     height:50%;
     width:100%;
 }
