--- a/assets/css/home_andy_css.css
+++ b/assets/css/home_andy_css.css
@@ -18,8 +18,8 @@
 */
 
 div.referral-item-wrapper {
-    margin-top:15px;
-    margin-bottom:20px;
+/*    margin-top:15px;*/
+/*    margin-bottom:20px;*/
     border: 1px solid #ffffff;
     background-color: #f2f2f2;
     
@@ -89,8 +89,12 @@ div.friend-referral {
     left: 100px;
 /*    margin-top: 40px;
     margin-right: 30px;*/
-    margin: 25px 200px 0 60px;
+    margin: 25px 200px 10px 60px;
     font-weight: normal;
+}
+
+div.load-more-button {
+    cursor: pointer;
 }
 
 div.vendor-name, div.list-name {
@@ -105,11 +109,30 @@ span.vendor-name, span.list-name {
     background-color:#d3d3d3;
 }
 
-.ui-state-active-accordion.subaccordion-header, ui-state-hover-accordion.subaccordion-header {
+.ui-state-active-accordion.subaccordion-header, ui-state-focus-accordion.subaccordion-header {
 /*    background-color:white;*/
-    border-bottom: 2px black solid;
+/*    border-bottom: 2px black solid;*/
+    border-top: 3px white solid;
+    border-bottom: 0px;
 }
 
+.subaccordion-header {
+    border-bottom: 3px white solid;
+}
+
+.subaccordion-content {
+    border-bottom: 3px white solid;
+    
+    -moz-border-radius-bottomleft: 0px; 
+    -webkit-border-bottom-left-radius: 0px; 
+    -khtml-border-bottom-left-radius: 0px; 
+    border-bottom-left-radius: 0px;
+    
+    -moz-border-radius-bottomright: 0px; 
+    -webkit-border-bottom-right-radius: 0px; 
+    -khtml-border-bottom-right-radius: 0px; 
+    border-bottom-right-radius: 0px;
+}
 div.subaccordion-header {
     position: relative;
 /*    height: 60px;*/
@@ -155,7 +178,8 @@ div.button-row {
     top: 0;
     right: 0;
     width: 250px;
-    margin: 15px;
+/*    margin: 15px;*/
+    margin: 5px;
 }
 
 div.subaccordion-button-row {
@@ -204,7 +228,7 @@ img.click-to-like img:hover {
     float:right;
 }
 
-.referrals-remove-button {
+.referrals-remove-button, .accordion-remove {
 /*    position: absolute;*/
 /*    right: 0px;*/
     display: inline;
@@ -237,16 +261,18 @@ div.number-of-likes {
 }
 
 .number-of-likes-inner {
-    position:absolute;
+/*    position:absolute;*/
     height:26px;
     width:42px;
-    top:15%;
+/*    top:15%;*/
 /*    top:50%;
     margin-top:-13px;*/
     color:white;
     font-weight:bold;
     font-size:16px;
     text-align:center;
+    display:table-cell;
+    vertical-align:middle;
 }
 
 div.show-all-comments-button {
