--- a/assets/jquery-ui-1.8.16.custom/css/custom-theme/jquery-ui-1.8.16.custom.css
+++ b/assets/jquery-ui-1.8.16.custom/css/custom-theme/jquery-ui-1.8.16.custom.css
@@ -20,7 +20,7 @@
         visibility: hidden; 
 }
 .ui-helper-clearfix { 
-    display: inline-block; 
+/*    display: inline-block; */
 }
 /* required comment for clearfix to work in Opera \*/
 * html .ui-helper-clearfix { height:1%; }
@@ -343,7 +343,7 @@
  * http://docs.jquery.com/UI/Accordion#theming
  */
 /* IE/Win - Fix animation bug - #4615 */
-.ui-accordion { width: 100%; }
+.ui-accordion { width: 99%; }
 .ui-accordion .ui-accordion-header {cursor: pointer; position: relative; margin-top: 1px; zoom: 1; }
 .ui-accordion .ui-accordion-li-fix {display: inline; }
 .ui-accordion .ui-accordion-header-active { border-bottom: 0 !important; }
